# nix-bucks

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
src/: App.svelte  i18n.js  main.ts  translations.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: getters.rs  lib.rs  main.rs  tables.rs
src-tauri/src/utils/: fixed_expense.rs  locale.rs  mod.rs  recurrence.rs  subscription.rs
src/lib/: Stats.svelte  TabButton.svelte  store.ts
src/lib/dialogs/: NewFixedExpenseDialog.svelte  NewIncomeDialog.svelte  NewPunctualIncomeDialog.svelte  NewSubscriptionDialog.svelte
src/lib/tables/: FixedExpenseTable.svelte  IncomeTable.svelte  PunctualIncomeTable.svelte  SubscriptionsTable.svelte
src/styles/: app_styles.css  content_styles.css  dialog_styles.css  styles.css
