[package]
name = "nix-bucks"
version = "0.1.0"
description = "A simple budgeting app"
authors = ["Marcos Gutiérrez <margual56@gmail.com"]
license = "GPL-3.0"
repository = "https://github.com/margual56/nix-bucks"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cached = "0.45.1"
chrono = { version = "0.4.31", features = ["serde"] }
directories = "5.0.1"
uuid = { version = "1.4.1", features = ["serde"] }
ordered-float = { version = "3.9.1", features = ["serde"] }
once_cell = "1.18.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
